# charr

./: .gitignore  .mdformat.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  development.md  project.md  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0000-template.md  0001-uv-workspace-two-packages.md  0002-requests-not-httpx-or-openai-sdk.md  0003-config-discovery-nearest-wins.md  0004-pydantic-for-models-and-validation.md  0005-env-vars-and-exit-codes.md  0006-mdformat-tables-for-gfm-tables.md  0007-markdown-wrap-keep.md  0008-json-schema-response-format.md  0009-resolve-ruff-rule-conflicts-in-config.md  0010-three-packages-eval-drives-charr.md  0011-dataset-manifest-as-unit.md  0012-manifest-encoding-jsonl.md  0013-rendering-libraries-plotly-optional.md  0014-stratified-generation-model.md  0015-ground-truth-by-construction.md  0016-multi-label-chart-dataset.md  0017-eval-metrics-from-confusion-substrate.md  0018-generator-structure-recipe-registry.md  0019-multi-config-style-sweep.md  0020-colour-sampling-ciede2000.md  0021-bundled-fonts-and-delivery.md  0022-charr-review-package-and-substrate-contract.md  0023-flask-for-charr-review-web-app.md  0024-eval-manifest-discovery-and-naming.md  0025-eval-pure-scorer-of-saved-predictions.md  README.md
