# uv workspace root for Charr. This is a virtual root (no [project] of its own);
# it coordinates the member packages and holds the shared dev tooling + config.
# See development.md for the layout and workflow.

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "pyright>=1.1",
  "mdformat>=0.7",
  # GFM table support for mdformat (auto-discovered as a plugin); tables are used in docs.
  "mdformat-tables>=1",
  # Type stubs for requests (which ships no inline types) so pyright stays clean.
  "types-requests>=2.31",
]

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 2

[tool.ruff.lint]
# Project policy: enable everything, then silence case by case inline with
# `# noqa: <code>`. Do not add broad global ignores here.
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
# Tests are the one sanctioned relaxation: bare asserts are how pytest works,
# test functions/modules do not need public-API docstrings, and test dirs are
# intentionally not importable packages.
"**/tests/**" = ["S101", "D100", "D101", "D102", "D103", "D104", "INP001"]

[tool.ruff.format]
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["packages"]
# importlib mode lets the two packages each have a tests/test_package.py
# without an import-name collision and without needing __init__.py in tests.
addopts = "-ra --import-mode=importlib"

[tool.pyright]
# Analyze only our source; keep the venv and other dirs out of scope.
include = ["packages"]
pythonVersion = "3.13"
