# uv workspace root for Charr. This is a virtual root (no [project] of its own);
# it coordinates the member packages and holds the shared dev tooling + config.
# See development.md for the layout and workflow.

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "pyright>=1.1",
  "mdformat>=0.7",
  # GFM table support for mdformat (auto-discovered as a plugin); tables are used in docs.
  "mdformat-tables>=1",
  # Type stubs for requests (which ships no inline types) so pyright stays clean.
  "types-requests>=2.31",
]

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 2

[tool.ruff.lint]
# Project policy: enable everything, then silence findings case by case inline with `# noqa: <code>`. The only entries
# in `ignore` are rules Ruff cannot satisfy under `select = ["ALL"]` (it emits a warning on each run otherwise): the
# discarded half of each conflicting docstring pair, and COM812 which conflicts with the formatter. These are conflict
# resolutions, not a way to dodge findings. See docs/adr/0009.
select = ["ALL"]
ignore = [
  "D203",   # conflicts with D211; we keep D211 (no blank line before a class docstring)
  "D213",   # conflicts with D212; we keep D212 (multi-line summary starts on the first line)
  "COM812", # trailing-comma rule conflicts with the formatter, which already manages commas
]

[tool.ruff.lint.per-file-ignores]
# Tests are the one sanctioned relaxation: bare asserts are how pytest works,
# test functions/modules do not need public-API docstrings, test dirs are
# intentionally not importable packages, asserting on literal expected values
# (counts, probabilities) is the substance of a test, and seeded `random` is the
# point in the generator tests (never security-sensitive here).
"**/tests/**" = ["S101", "D100", "D101", "D102", "D103", "D104", "INP001", "PLR2004", "S311"]

[tool.ruff.format]
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["packages"]
# importlib mode lets the two packages each have a tests/test_package.py
# without an import-name collision and without needing __init__.py in tests.
addopts = "-ra --import-mode=importlib"

[tool.pyright]
# Analyze only our source; keep the venv and other dirs out of scope.
include = ["packages"]
pythonVersion = "3.13"
